Fixed body scrolling issue for slideouts/modals (to be tested on mobile)

--- a/frontend/src/styles/base/project/_globals.scss
+++ b/frontend/src/styles/base/project/_globals.scss
@@ -515,6 +515,11 @@ a.pdf-link {
     }
 }
 
+.modal-open {
+    overflow: hidden;
+    height: 100% !important;
+}
+
 // DEV
 // html::-webkit-scrollbar {
 //     width: 0 !important;
